force-app/main/default/objects/Temporal_Encuadramiento_Dia__c/Temporal_Encuadramiento_Dia__c.object-meta.xml
<CustomObject>
    <label>Temporal Encuadramiento Dia</label>
    <nameField>
        <label>id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Encuadramientos Dias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>