force-app/main/default/objects/Temporal_Encuadramiento_Dia__c/fields/ClaveExterna__c.field-meta.xml
<CustomField>
    <fullName>ClaveExterna__c</fullName>
    <label>ClaveExterna</label>
    <length>255</length>
    <type>Text</type>
</CustomField>