force-app/main/default/objects/Temporal_Encuadramiento_Dia__c/fields/EN_CURSO__c.field-meta.xml
<CustomField>
    <fullName>EN_CURSO__c</fullName>
    <label>EN_CURSO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>