force-app/main/default/objects/Temporal_Encuadramiento_Dia__c/fields/EN_FECHAS__c.field-meta.xml
<CustomField>
    <fullName>EN_FECHAS__c</fullName>
    <label>EN_FECHAS</label>
    <type>Date</type>
</CustomField>