force-app/main/default/objects/Temporal_Encuadramiento_Dia__c/fields/TipodeError__c.field-meta.xml
<CustomField>
    <fullName>TipodeError__c</fullName>
    <label>TipodeError</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>