force-app/main/default/objects/Temporal_Encuadramiento_Dia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EN_ALUMNO__c</columns>
    <columns>EN_ANO__c</columns>
    <columns>EN_CURSO__c</columns>
    <columns>P_DDDKEY__c</columns>
    <columns>p_salesforce_id__c</columns>
    <columns>EN_FECHAS__c</columns>
    <columns>Estado__c</columns>
    <columns>TipodeError__c</columns>
    <columns>ClaveExterna__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>P_DDDKEY__c</field>
        <operation>equals</operation>
        <value>ENC091062024312</value>
    </filters>
    <label>All Records</label>
</ListView>